--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,25 +1,25 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
 location __PATH__/ {
 
-  # Path to source
-  alias __INSTALL_DIR__/;
+  # For large collection uploads. The default anki-sync-server limit is 100M.
+  client_max_body_size 128M;
 
-### Example PHP configuration (remove it if not used)
-  index index.php;
+  # Proxy to the app
+  proxy_pass http://127.0.0.1:__PORT__/;
+  proxy_http_version 1.1;
 
-  # Common parameter to increase upload size limit in conjunction with dedicated PHP-FPM file
-  # client_max_body_size 50M;
+  # Forward headers
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Forwarded-Proto $scheme;
 
-  try_files $uri $uri/ index.php;
-  location ~ [^/]\.php(/|$) {
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-    fastcgi_pass unix:/var/run/php/php__PHP_VERSION__-fpm-__APP__.sock;
+  # Websocket support
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection "upgrade";
 
-    fastcgi_index index.php;
-    include fastcgi_params;
-    fastcgi_param REMOTE_USER $remote_user;
-    fastcgi_param PATH_INFO $fastcgi_path_info;
-    fastcgi_param SCRIPT_FILENAME $request_filename;
-  }
-### End of PHP configuration part
+  # Disable buffering to prevent issues with large media syncs
+  proxy_buffering off;
+
+  # Include SSOWAT user panel.
+  include conf.d/yunohost/sso.conf.inc;
 }
